--- a/res/layout/activity_map_routing.xml
+++ b/res/layout/activity_map_routing.xml
@@ -2,11 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}" >
+    tools:context="org.medankulinar.maps.MapRoutingActivity" >
 
     <fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.MapFragment" />
+
 </RelativeLayout>
