--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -16,6 +16,16 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <!-- <item name="android:actionBarStyle">@style/ActionBarStyle</item> -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
+    
+    <!-- ToolBar -->
+  <style name="ToolBarStyle" parent="Theme.AppCompat">
+      <item name="android:textColorPrimary">@color/primary_text</item>
+      <item name="android:textColorSecondary">@color/secondary_text</item>
+      <item name="actionMenuTextColor">@android:color/white</item>
+ </style>
     
 </resources>
