--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -9,6 +9,6 @@
 		<item>@string/NAVIGATION_MARKER</item>
 	</string-array>
 	<string-array name="defaultdatasources">
-	     <item>MedanKulinAR|http://medankulinar-freepro.rhcloud.com/api/index/getlocation|2|0|true</item>
+	     <item>MedanAR|http://medanar-freepro.rhcloud.com/api/getlocation|2|0|true</item>
 	</string-array>
 </resources>
