--- a/res/layout/activity_location_detail.xml
+++ b/res/layout/activity_location_detail.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="org.medankulinar.event.LocationDetailActivity" >
-    
+
     <include layout="@layout/toolbar" />
 
     <RelativeLayout
@@ -72,7 +72,38 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <ImageView
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal" >
+
+                    <LinearLayout
+                        android:id="@+id/progress_image_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:minHeight="230dp"
+                        android:visibility="visible" >
+
+                        <ProgressBar
+                            android:id="@+id/progress_image"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/location_image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@string/img_location"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/thumbnail_default" />
+                </RelativeLayout>
+
+                <!-- <ImageView
                     android:id="@+id/location_image"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -81,7 +112,7 @@
                     android:adjustViewBounds="true"
                     android:contentDescription="@string/img_location"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/thumbnail_default" />
+                    android:src="@drawable/thumbnail_default" /> -->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -116,7 +147,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:paddingLeft="10dp" >
+                        android:paddingStart="10dp" 
+                        android:paddingEnd="0dp">
 
                         <TextView
                             android:id="@+id/txt_description"
@@ -141,7 +173,6 @@
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
-
     </RelativeLayout>
 
 </LinearLayout>
