--- a/res/layout/location_view.xml
+++ b/res/layout/location_view.xml
@@ -34,16 +34,37 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/location_image"
-        android:layout_width="fill_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/thumbnail_default"
-        android:contentDescription="@string/img_location" />
+        android:gravity="center_horizontal">
+
+        <LinearLayout
+            android:id="@+id/progress_image_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
+            android:minHeight="230dp"
+            android:visibility="visible" >
+
+            <ProgressBar
+                android:id="@+id/progress_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/location_image"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img_location"
+            android:scaleType="fitCenter"
+            android:src="@drawable/thumbnail_default" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/txt_address"
