--- a/res/layout/activity_category.xml
+++ b/res/layout/activity_category.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="org.medankulinar.event.ListPoiActivity" >
-
+    tools:context="org.medankulinar.CategoryActivity" >
+	
     <include layout="@layout/toolbar" />
-
+    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -23,7 +23,7 @@
                 android:orientation="vertical" >
 
                 <ProgressBar
-                    android:id="@+id/inbox_progressbar"
+                    android:id="@+id/category_progressbar"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:indeterminateTintMode="src_in"
@@ -39,12 +39,13 @@
             android:paddingRight="@dimen/activity_horizontal_padding" >
 
             <ListView
-                android:id="@+id/list_location"
+                android:id="@+id/list_category"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1" >
             </ListView>
         </LinearLayout>
     </RelativeLayout>
+    
 
 </LinearLayout>
