--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -9,6 +9,7 @@
 		<item>@string/NAVIGATION_MARKER</item>
 	</string-array>
 	<string-array name="defaultdatasources">
-	     <item>MedanAR|http://medanar.local/api/getlocation|7|0|true</item>
+	     <!-- <item>MedanAR|http://medanar.local/api/getlocation|7|0|true</item> -->
+	     <item>MedanAR|http://medanar-freepro.rhcloud.com/api/getlocation|7|0|true</item>
 	</string-array>
 </resources>
