--- a/res/layout/category_item.xml
+++ b/res/layout/category_item.xml
@@ -11,13 +11,13 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
+        android:focusable="@dimen/activity_vertical_padding"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/activity_vertical_padding"
-        android:paddingTop="@dimen/activity_vertical_padding" >
+        android:padding="5dp" >
 
         <ImageView
             android:id="@+id/img_category"
-            android:layout_width="35dp"
+            android:layout_width="25dp"
             android:layout_height="35dp"
             android:src="@drawable/marker_atm" />
 
@@ -34,7 +34,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Large Text"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="16sp" />
+
         </LinearLayout>
 
     </LinearLayout>
